--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,17 +5,17 @@
         <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
       {% endif %}
 
-      <div class="site-info">
+      <!-- <div class="site-info">
         <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
         <p class="site-description">{{ site.description }}</p>
-      </div>
+      </div> -->
 
       <nav>
         {% for nav in site.navigation %}
         {% if nav.url contains 'http://' or nav.url contains 'https://' %}
-        <a href="{{ nav.url }}">{{ nav.name }}</a>
+        <a class="square" href="{{ nav.url }}">{{ nav.name }}</a>
         {% else %}
-        <a href="{{ site.baseurl }}{{ nav.url }}">{{ nav.name }}</a>
+        <a class="square" href="{{ site.baseurl }}{{ nav.url }}">{{ nav.name }}</a>
         {% endif %}
         {% endfor %}
       </nav>
