include grid file

--- a/style.scss
+++ b/style.scss
@@ -8,6 +8,8 @@
 @import "reset";
 @import "open-color";
 @import "variables";
+
+@import "grid";
 @import "shapes";
 // Syntax highlighting @import is at the bottom of this file
 
