change square background color

--- a/_sass/_shapes.scss
+++ b/_sass/_shapes.scss
@@ -1,7 +1,7 @@
 // Shapes
 
 .square {
-  background-color: navyblue;
+  background-color: $black;
   color: $white;
   height: 100px;
   width: 100px;
