--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,10 +5,9 @@
         <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
       {% endif %}
 
-      <!-- <div class="site-info">
-        <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
-        <p class="site-description">{{ site.description }}</p>
-      </div> -->
+      <div class="site-info">
+        <img src="/images/HeaderNavName.png" alt="Lindsey Scales" />
+      </div>
 
       <nav class="grid">
         {% for nav in site.navigation %}
