--- a/style.scss
+++ b/style.scss
@@ -10,6 +10,7 @@
 @import "variables";
 
 @import "grid";
+@import "nav";
 @import "shapes";
 // Syntax highlighting @import is at the bottom of this file
 
