update spacing variables

--- a/_sass/_grid.scss
+++ b/_sass/_grid.scss
@@ -7,8 +7,8 @@
 
   &__block {
     &:not(:last-child) {
-      margin-bottom: $spacing-lg;
-      margin-right: $spacing-lg;
+      margin-bottom: $spacing-xl;
+      margin-right: $spacing-xl;
     }
 
     &--2 {
