--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -1,3 +1,8 @@
 .masthead {
-  border-bottom: 0;
+  align-items: center;
+  border-bottom: 0 !important;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 0;
+  padding-top: $spacing-med;
 }
