--- a/style.scss
+++ b/style.scss
@@ -11,6 +11,7 @@
 
 @import "grid";
 @import "helpers";
+@import "images";
 @import "nav";
 @import "shapes";
 // Syntax highlighting @import is at the bottom of this file
