remove margins from images

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,7 +6,7 @@
       {% endif %}
 
       <div class="site-info">
-        <img class="h-no-margin-bottom" src="/images/HeaderNavName.png" alt="Lindsey Scales" />
+        <img src="/images/HeaderNavName.png" alt="Lindsey Scales" />
       </div>
 
       <nav class="nav">
