include main file import

--- a/style.scss
+++ b/style.scss
@@ -12,6 +12,7 @@
 @import "grid";
 @import "helpers";
 @import "images";
+@import "main";
 @import "nav";
 @import "shapes";
 // Syntax highlighting @import is at the bottom of this file
