update home link in header

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,7 +6,9 @@
       {% endif %}
 
       <div class="site-info">
-        <img src="/images/HeaderNavName.png" alt="Lindsey Scales" />
+        <a href="/">
+          <img src="/images/HeaderNavName.png" alt="Lindsey Scales" />
+        </a>
       </div>
 
       <nav class="nav">
