update file name

--- a/style.scss
+++ b/style.scss
@@ -12,9 +12,9 @@
 @import "grid";
 @import "helpers";
 @import "images";
-@import "main";
 @import "nav";
 @import "shapes";
+@import "wrapper";
 // Syntax highlighting @import is at the bottom of this file
 
 /**************/
