--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -9,4 +9,8 @@
   align-items: center;
   border-bottom: 0 !important; // theme override
   display: flex;
+
+  @include mobile {
+    display: block;
+  }
 }
