--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -6,7 +6,7 @@
 
   @include mobile {
     justify-content: center;
-    margin-top: $spacing-med !important;
+    margin-top: $spacing-lg !important;
   }
 }
 
