--- a/_sass/_grid.scss
+++ b/_sass/_grid.scss
@@ -17,7 +17,7 @@
 
     @include mobile {
       margin-bottom: $spacing-xxl;
-      margin-right: 0;
+      margin-right: 0 !important;
     }
   }
 }
