--- a/_sass/_images.scss
+++ b/_sass/_images.scss
@@ -3,12 +3,6 @@
 img {
   border-radius: 0 !important;
   margin-bottom: 0 !important;
-}
-
-.img--about {
-  filter: grayscale(50%);
-  height: 80%;
-  width: 80%;
 
   @include mobile {
     margin-left: auto;
@@ -16,6 +10,12 @@ img {
   }
 }
 
-.img--work {
+.img--about {
+  filter: grayscale(50%);
+  height: 80%;
+  width: 80%;
+}
+
+.img--grayscale {
   filter: grayscale(80%);
 }
