--- a/_sass/_images.scss
+++ b/_sass/_images.scss
@@ -5,8 +5,8 @@ img {
   margin-bottom: 0 !important;
 
   @include mobile {
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: auto !important;
+    margin-right: auto !important;
   }
 }
 
