--- a/style.scss
+++ b/style.scss
@@ -14,6 +14,7 @@
 @import "images";
 @import "nav";
 @import "shapes";
+@import "typography";
 @import "wrapper";
 // Syntax highlighting @import is at the bottom of this file
 
