update link hover color

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -1,5 +1,9 @@
 // Typography
 
 a {
-  color: $blue !important; //theme override
+  color: $blue !important;
+
+  &:hover {
+    color: $darkBlue !important;
+  }
 }
