--- a/_sass/_shapes.scss
+++ b/_sass/_shapes.scss
@@ -10,3 +10,16 @@
   height: 100px;
   width: 100px;
 }
+
+.outline {
+  display: block;
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  // width: 264px;
+  // height: 264px;
+  backface-visibility: hidden;
+  box-shadow: 0 0 0 2px $blue;
+  content: "";
+  z-index: 1;
+}
