update outline and about image

--- a/_sass/_images.scss
+++ b/_sass/_images.scss
@@ -12,8 +12,8 @@ img {
 
 .img--about {
   filter: grayscale(50%);
-  height: 80%;
-  width: 80%;
+  height: 305px;
+  width: 250px;
 }
 
 .img--grayscale {
