--- a/_sass/_grid.scss
+++ b/_sass/_grid.scss
@@ -14,6 +14,9 @@
   }
 
   &__block {
+    flex: 1;
+    justify-content: center;
+
     &:not(:last-child) {
       margin-right: $spacing-xxl;
     }
