--- a/_sass/_shapes.scss
+++ b/_sass/_shapes.scss
@@ -23,3 +23,44 @@
   width: 255px;
   z-index: 1;
 }
+
+.outline--nav-hover {
+  &:hover {
+    .corner {
+      @extend %full-fill;
+      width: $box-size;
+      height: $box-size;
+      margin: auto;
+      background: $codepen-logo-path no-repeat 50% / 70% rgba(#000, .1);
+      color: $main-color;
+      box-shadow: inset 0 0 0 1px rgba($main-color, .5);
+
+      &::before,
+      &::after {
+        @extend %full-fill;
+        content: '';
+        z-index: -1;
+        margin: -1 * $clip-distance * 100%;
+        box-shadow: inset 0 0 0 $path-width;
+        animation: clipMe $anime-time linear infinite;
+      }
+
+      &::before {
+        animation-delay: $anime-time * -.5;
+      }
+
+      // for debug
+      &:hover {
+        &::after,
+        &::before {
+          background-color: rgba($main-color, .3);
+        }
+      }
+    }
+
+@keyframes clipMe {
+  0%, 100% {clip: rect(0px, $clip-size, $path-width, 0px); }
+  25% {clip: rect(0px, $path-width, $clip-size, 0px); }
+  50% {clip: rect($clip-size - $path-width, $clip-size, $clip-size, 0px); }
+  75% {clip: rect(0px, $clip-size, $clip-size, $clip-size - $path-width); }
+}
