--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -94,3 +94,21 @@ $spacing-xxl: 30px;
     @content;
   }
 }
+
+// Animations
+
+$anime-time: 8s;
+$box-size: 200px;
+$clip-distance: .05;
+$clip-size: $box-size * (1 + $clip-distance * 2);
+$path-width: 2px;
+
+$main-color: $blue;
+
+%full-fill {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
