--- a/_sass/_shapes.scss
+++ b/_sass/_shapes.scss
@@ -24,19 +24,28 @@
   z-index: 1;
 }
 
+.corner-stretch {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
 .outline--nav-hover {
   &:hover {
     .corner {
-      @include corner-animate;
+      @extend .corner-stretch;
       width: $box-size;
       height: $box-size;
       margin: auto;
+      background-color: $white !important;
       color: $main-color;
       box-shadow: inset 0 0 0 1px rgba($main-color, .5);
 
       &::before,
       &::after {
-        @include corner-animate;
+        @extend .corner-stretch;
         content: '';
         z-index: -1;
         margin: -1 * $clip-distance * 100%;
@@ -58,10 +67,19 @@
     }
 
     @keyframes clipMe {
-      0%, 100% {clip: rect(0px, $clip-size, $path-width, 0px); }
-      25% {clip: rect(0px, $path-width, $clip-size, 0px); }
-      50% {clip: rect($clip-size - $path-width, $clip-size, $clip-size, 0px); }
-      75% {clip: rect(0px, $clip-size, $clip-size, $clip-size - $path-width); }
+      0%,
+      100% {
+        clip: rect(0px, $clip-size, $path-width, 0px);
+      }
+      25% {
+        clip: rect(0px, $path-width, $clip-size, 0px);
+      }
+      50% {
+        clip: rect($clip-size - $path-width, $clip-size, $clip-size, 0px);
+      }
+      75% {
+        clip: rect(0px, $clip-size, $clip-size, $clip-size - $path-width);
+      }
     }
   }
 }
