--- a/_sass/_shapes.scss
+++ b/_sass/_shapes.scss
@@ -24,7 +24,7 @@
   z-index: 1;
 }
 
-.corner-stretch {
+.corners {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -34,8 +34,7 @@
 
 .outline--nav-hover {
   &:hover {
-    .corner {
-      @extend .corner-stretch;
+    .corners {
       width: $box-size;
       height: $box-size;
       margin: auto;
@@ -45,8 +44,7 @@
 
       &::before,
       &::after {
-        @extend .corner-stretch;
-        content: '';
+        content: "";
         z-index: -1;
         margin: -1 * $clip-distance * 100%;
         box-shadow: inset 0 0 0 $path-width;
