--- a/_sass/_shapes.scss
+++ b/_sass/_shapes.scss
@@ -34,11 +34,11 @@
 
 .outline--nav-hover {
   &:hover {
-    .corners {
+    & + .corners {
       width: $box-size;
       height: $box-size;
       margin: auto;
-      background-color: $white !important;
+      background-color: transparent !important;
       color: $main-color;
       box-shadow: inset 0 0 0 1px rgba($main-color, .5);
 
