--- a/_sass/_shapes.scss
+++ b/_sass/_shapes.scss
@@ -24,60 +24,49 @@
   z-index: 1;
 }
 
-.corners {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+@keyframes clipMe {
+  0%,
+  100% {
+    clip: rect(0px, $clip-size, $path-width, 0px);
+  }
+  25% {
+    clip: rect(0px, $path-width, $clip-size, 0px);
+  }
+  50% {
+    clip: rect($clip-size - $path-width, $clip-size, $clip-size, 0px);
+  }
+  75% {
+    clip: rect(0px, $clip-size, $clip-size, $clip-size - $path-width);
+  }
 }
 
 .outline--nav-hover {
+  position: relative;
+
   &:hover {
-    & + .corners {
-      width: $box-size;
-      height: $box-size;
-      margin: auto;
-      background-color: transparent !important;
-      color: $main-color;
-      box-shadow: inset 0 0 0 1px rgba($main-color, .5);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: $box-size;
+    height: $box-size;
+    margin: auto;
+    background-color: red !important;
+    color: $main-color;
+    box-shadow: inset 0 0 0 1px rgba($main-color, .5);
 
-      &::before,
-      &::after {
-        content: "";
-        z-index: -1;
-        margin: -1 * $clip-distance * 100%;
-        box-shadow: inset 0 0 0 $path-width;
-        animation: clipMe $anime-time linear infinite;
-      }
-
-      &::before {
-        animation-delay: $anime-time * -.5;
-      }
-
-      // for debug
-      &:hover {
-        &::after,
-        &::before {
-          background-color: rgba($main-color, .3);
-        }
-      }
+    &::before,
+    &::after {
+      content: "";
+      z-index: -1;
+      margin: -1 * $clip-distance * 100%;
+      box-shadow: inset 0 0 0 $path-width;
+      animation: clipMe $anime-time linear infinite;
     }
 
-    @keyframes clipMe {
-      0%,
-      100% {
-        clip: rect(0px, $clip-size, $path-width, 0px);
-      }
-      25% {
-        clip: rect(0px, $path-width, $clip-size, 0px);
-      }
-      50% {
-        clip: rect($clip-size - $path-width, $clip-size, $clip-size, 0px);
-      }
-      75% {
-        clip: rect(0px, $clip-size, $clip-size, $clip-size - $path-width);
-      }
+    &::before {
+      animation-delay: $anime-time * -.5;
     }
   }
 }
