adjust positioning of nav

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -22,7 +22,7 @@
           </a>
           {% else %}
           <a class="outline--nav-hover" href="{{ site.baseurl }}{{ nav.url }}">
-            <div class="square h-position-relative">
+            <div class="square">
               {{ nav.name }}
             </div>
           </a>
