--- a/_sass/_shapes.scss
+++ b/_sass/_shapes.scss
@@ -40,26 +40,22 @@
   }
 }
 
-.outline--nav-hover {
+.outline--nav-hover:hover {
   &::before,
   &::after {
-    &:hover {
-      animation: clipMe $anime-time linear infinite;
-      bottom: 0;
-      box-shadow: inset 0 0 0 $path-width $main-color;
-      content: "";
-      left: 0;
-      margin: -1 * $clip-distance * 100%;
-      position: absolute;
-      right: 0;
-      top: 0;
-      z-index: -1;
-    }
+    animation: clipMe $anime-time linear infinite;
+    bottom: 0;
+    box-shadow: inset 0 0 0 $path-width $main-color;
+    content: "";
+    left: 0;
+    margin: -1 * $clip-distance * 100%;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: -1;
   }
 
   &::before {
-    &:hover {
-      animation-delay: $anime-time * -.5;
-    }
+    animation-delay: $anime-time * -.5;
   }
 }
