--- a/_sass/_shapes.scss
+++ b/_sass/_shapes.scss
@@ -6,8 +6,9 @@
   color: $white !important; // override link style
   display: flex;
   font-weight: bold;
-  justify-content: center;
   height: 100px;
+  justify-content: center;
+  position: relative;
   width: 100px;
 
   &:hover {
@@ -49,14 +50,14 @@
   &::before,
   &::after {
     animation: clipMe $anime-time linear infinite;
-    bottom: -2px;
+    bottom: 0;
     box-shadow: inset 0 0 0 $path-width $main-color;
     content: "";
-    left: 18px;
+    left: 0;
     margin: -5px;
     position: absolute;
-    right: -1px;
-    top: -2px;
+    right: 0;
+    top: 0;
   }
 
   &::before {
