--- a/_sass/_shapes.scss
+++ b/_sass/_shapes.scss
@@ -50,6 +50,7 @@
   &::before,
   &::after {
     animation: clipMe $anime-time linear infinite;
+    animation-delay: 2s;
     bottom: 0;
     box-shadow: inset 0 0 0 $path-width $main-color;
     content: "";
@@ -58,5 +59,13 @@
     position: absolute;
     right: 0;
     top: 0;
+  }
+}
+
+.outline--nav-hover:nth-child(even):hover,
+.outline--nav-hover:nth-child(even):active {
+  &::before,
+  &::after {
+    animation-fill-mode: backwards;
   }
 }
