--- a/_sass/_shapes.scss
+++ b/_sass/_shapes.scss
@@ -56,6 +56,7 @@
     content: "";
     left: 0;
     margin: -5px;
+    padding: $spacing-xxl;
     position: absolute;
     right: 0;
     top: 0;
