--- a/_sass/_shapes.scss
+++ b/_sass/_shapes.scss
@@ -45,20 +45,24 @@
   }
 }
 
-.outline--nav-hover:hover,
-.outline--nav-hover:active {
-  &::before,
-  &::after {
-    animation: clipMe $anime-time linear infinite;
-    animation-delay: -2s;
-    bottom: 0;
-    box-shadow: inset 0 0 0 $path-width $main-color;
-    content: "";
-    left: 0;
-    margin: -5px;
-    padding: $spacing-xxl;
-    position: absolute;
-    right: 0;
-    top: 0;
+.outline--nav-hover {
+  padding: $spacing-xxl;
+
+  &:hover,
+  &:active {
+    &::before,
+    &::after {
+      animation: clipMe $anime-time linear infinite;
+      animation-delay: -2s;
+      bottom: 0;
+      box-shadow: inset 0 0 0 $path-width $main-color;
+      content: "";
+      left: 0;
+      margin: -5px;
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
   }
 }
+
