update work outline

--- a/_sass/_shapes.scss
+++ b/_sass/_shapes.scss
@@ -34,6 +34,12 @@
   z-index: 1;
 }
 
+.outline--hover:hover {
+  @extend .outline;
+  height: 100%;
+  width: 100%;
+}
+
 @keyframes clipMe {
   0%,
   100% {
@@ -70,4 +76,3 @@
     }
   }
 }
-
