update filter on images in work view

--- a/_sass/_images.scss
+++ b/_sass/_images.scss
@@ -26,10 +26,24 @@ img {
   }
 }
 
-.defs-only {
-  position: absolute;
-  height: 0;
-  left: -100%;
-  overflow: none;
-  width: 0;
+.filter {
+  position: relative;
+
+  &:hover {
+    filter: hue-rotate(1deg);
+    -webkit-filter: hue-rotate(1deg);
+    -moz-filter: hue-rotate(1deg);
+
+    &::after{
+      background: #2031b2;
+      content: "";
+      display: block;
+      top: 0;
+      left: 0;
+      height: 100%;
+      mix-blend-mode: multiply;
+      position: absolute;
+      width: 100%;
+    }
+  }
 }
