update about image

--- a/_sass/_shapes.scss
+++ b/_sass/_shapes.scss
@@ -23,13 +23,15 @@
 
 .outline {
   backface-visibility: hidden;
+  bottom: 0;
   box-shadow: 0 0 0 4px $blue;
   content: "";
   display: block;
   height: 315px;
-  left: -5px;
+  left: 0;
   position: absolute;
-  top: -5px;
+  right: 0;
+  top: 0;
   width: 255px;
   z-index: 1;
 }
