--- a/_sass/_images.scss
+++ b/_sass/_images.scss
@@ -14,6 +14,8 @@ img {
 .img--about {
   filter: grayscale(50%);
   height: 305px;
+  margin-left: auto;
+  margin-right: auto;
   width: 245px;
   max-width: none !important;
 }
