--- a/_sass/_shapes.scss
+++ b/_sass/_shapes.scss
@@ -29,6 +29,8 @@
   display: block;
   height: 315px;
   left: 0;
+  margin-left: auto;
+  margin-right: auto;
   position: absolute;
   right: 0;
   top: 0;
