--- a/_sass/_shapes.scss
+++ b/_sass/_shapes.scss
@@ -23,7 +23,7 @@
 
 .outline {
   backface-visibility: hidden;
-  bottom: 0;
+  bottom: -5px;
   box-shadow: 0 0 0 4px $blue;
   content: "";
   display: block;
@@ -33,7 +33,7 @@
   margin-right: auto;
   position: absolute;
   right: 0;
-  top: 0;
+  top: -5px;
   width: 255px;
   z-index: 1;
 }
