darken photo outline

--- a/_sass/_shapes.scss
+++ b/_sass/_shapes.scss
@@ -24,7 +24,7 @@
 .outline {
   backface-visibility: hidden;
   bottom: -5px;
-  box-shadow: 0 0 0 2px $blue;
+  box-shadow: 0 0 0 2px $darkBlue;
   content: "";
   display: block;
   height: 431px;
