--- a/_sass/_grid.scss
+++ b/_sass/_grid.scss
@@ -5,7 +5,7 @@
     align-items: center;
     display: flex;
     justify-content: center;
-    margin-bottom: $spacing-xxl;
+    margin-bottom: $spacing-med;
 
     @include mobile {
       flex-direction: column;
