--- a/_sass/_wrapper.scss
+++ b/_sass/_wrapper.scss
@@ -25,4 +25,8 @@
 
 .wrapper-footer {
   border-top: 2px solid $darkBlue !important;
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
 }
