--- a/_sass/_images.scss
+++ b/_sass/_images.scss
@@ -1,7 +1,7 @@
 // Images
 
 img {
-  border-radius: 0 !important;
+  border-radius: 5px !important;
   margin-bottom: 0 !important;
   margin-right: 0 !important;
 
